refactor: 자바17 .collect(Collectors.toList()) -> toList() 대체 가능 - 간결한 코드를 위해 변경